[tool.poetry]
name = "tidbcloudy"
version = "1.0.4"
description = "(Unofficial) Python SDK for TiDB Cloud"
readme = "README.md"
authors = ["Aolin <aolinz@outlook.com>"]
repository = "https://github.com/Oreoxmt/tidbcloudy"
documentation = "https://github.com/Oreoxmt/tidbcloudy#readme"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
mysqlclient = "^2.1.1"
deprecation = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
