[tool.poetry]
name = "tidbcloudy"
version = "1.0.8"
description = "(Unofficial) Python SDK for TiDB Cloud"
readme = "README.md"
authors = ["Aolin <aolinz@outlook.com>"]
repository = "https://github.com/Oreoxmt/tidbcloudy"
documentation = "https://github.com/Oreoxmt/tidbcloudy#readme"

[tool.poetry.dependencies]
python = "^3.7"
mysqlclient = "^2.1.1"
deprecation = "^2.1.0"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
